edit download link

--- a/download.html
+++ b/download.html
@@ -65,9 +65,11 @@
 			<div class="content">
 				<p class="pb10">
 					カガミハラ／ジャスティス フリー版 (更新:2018/08/14)&nbsp;&nbsp;<span class="small">zip / 1.54 GB / MD5: e8bae2eff4242a47e93df9e465ae12b5</span>
-					<a href="contents/KJustice_Free.zip" onClick="_gaq.push(['_trackEvent', 'File', 'Download', 'justice_trial_v100']);"><img src="img/release_download.png" alt="カガミハラジャスティス フリー体験版 ダウンロード" class="imghover" /></a><br/>
+					<a href="https://fragaria.booth.pm/items/1409487" onClick="_gaq.push(['_trackEvent', 'File', 'Download', 'justice_trial_v100']);"><img src="img/release_download.png" alt="カガミハラジャスティス フリー体験版 ダウンロード" class="imghover" /></a><br/>
 				</p>
 				<p>
+　　
+					※上記は外部ページ（Booth）へのリンクです。<br>
 					※フリー版ではカガミハラ／ジャスティス&nbsp;&nbsp;を最後まで遊ぶことができます。<br>
 					※フリー版にはオマケシナリオは含まれません。オマケシナリオは完全版（<a href="https://fragaria.booth.pm/">Booth</a>にて頒布中）にのみ含まれます。<br>
 					※各種修正パッチの適用は不要です。<br>
