--- a/news.html
+++ b/news.html
@@ -61,6 +61,10 @@
     <div id="main">
         <h2><img src="img/menu_news.png" alt="ニュース"></h2>
         <div class="news_box">
+                        <div class="news_list" id="2019_06_10">
+                <p class="date">2019-06-10</p>
+                <p class="content">WEBサイトを移設しました。</p>
+            </div>
                         <div class="news_list" id="2017_08_23">
                 <p class="date">2017-08-23</p>
                 <p class="content"><a href="https://fragaria.booth.pm/" target="_blank">BOOTH</a>でのC92新刊の販売情報を<a href="information.html">インフォメーション</a>等に掲載しました。</p>
