--- a/justice/index.html
+++ b/justice/index.html
@@ -51,7 +51,7 @@
         <ul id="nav_itaku">
             <li class="title"><img src="img/nav_itaku_title.png" alt="委託販売" /></li>
 
-            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li>
+            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li> <li><a href="https://ec.nintendo.com/JP/ja/titles/70010000034306" target="_blank"><img src="img/nav_itaku06.png" alt="Nintendo Switch" class="imghover" /></a></li>
         </ul>
 		<div id="nav_twitter">
 			<a href="https://twitter.com/fragarian" target="_blank"><img src="img/nav_twitter.png" alt="twitter @fragarian" class="imghover" /></a>
@@ -62,7 +62,7 @@
         <div class="copy"><img src="img/copy_px.png" alt="―――これは戦争だ。" /></div>
         <div class="kokuchi">
             <ul class="banner_list">
-                <li><a href="download.html"><img src="img/release_free.png" alt="フリー公開中！" class="imghover" /></a></li>
+                <li><a href="https://ec.nintendo.com/JP/ja/titles/70010000034306"><img src="img/release_switch.png" alt="Nintendo Switch版販売中！" class="imghover" /></a></li>
                <!-- <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/c92_booth.png" alt="C92新刊ほかBOOTHにて販売中" class="imghover" /></a></li> -->
             </ul>
             <div class="news_title"><img src="img/top_news_title.png" alt="Recent News"></div>
