--- a/justice/information.html
+++ b/justice/information.html
@@ -60,7 +60,7 @@ $(function(){
         <ul id="nav_itaku">
             <li class="title"><img src="img/nav_itaku_title.png" alt="委託販売" /></li>
 
-            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li>
+            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li> <li><a href="https://ec.nintendo.com/JP/ja/titles/70010000034306" target="_blank"><img src="img/nav_itaku06.png" alt="Nintendo Switch" class="imghover" /></a></li>
         </ul>
 		<div id="nav_twitter">
 			<a href="https://twitter.com/fragarian" target="_blank"><img src="img/nav_twitter.png" alt="twitter @fragarian" class="imghover" /></a>
@@ -81,12 +81,12 @@ $(function(){
 					<dt>対象年齢</dt>
 					<dd>全年齢対応</dd>
 					<dt>動作環境</dt>
-					<dd>Windows XP/Vista/7/8/10</dd>
+					<dd>Windows XP/Vista/7/8/10/Nintendo Switch</dd>
 				</dl>
 			</div>
 			<h3>発行物</h3>
 			<div class="content">
-				<h4>頒布中・予定</h4>
+				<h4>頒布中</h4>
 				<dl class="goods_list">
 					<dt>
 						<a href="img/information/jacket_px_l.jpg" class="productImage">
@@ -97,7 +97,7 @@ $(function(){
 					<dd>
 						<div class="title">「カガミハラ／ジャスティス」</div>
 						<dl>
-							<dt>内容物</dt><dd>DVD</dd>
+							<dt>内容物</dt><dd>ダウンロード販売のみ（パッケージ版頒布終了）</dd>
 							<dt>発行日</dt><dd>2017/08/11 コミックマーケット92</dd>
 							<dt>イベント価格</dt><dd>1500円</dd>
 						</dl>
@@ -109,10 +109,31 @@ $(function(){
 							※本パッケージは「カガミハラ／ジャスティス」シリーズ全三部を全て収録しています。<br/>
 							※2017年8月時点での修正パッチは全て適用済となっております。
 						</p>
-						<div class="itaku_title"><a href="https://fragaria.booth.pm/items/608098" target="_blank">パッケージ販売はこちら</a></div>
+						<div class="itaku_title"><a href="https://fragaria.booth.pm/items/659959" target="_blank">ダウンロード版はこちら</a></div>											<div class="itaku_title"><a href="https://ec.nintendo.com/JP/ja/titles/70010000034306" target="_blank">Switch版はこちら</a></div>
 					</dd>
 				</dl>
+
 				<dl class="goods_list">
+					<dt>
+						<a href="img/information/jacket_p1_l.jpg" class="productImage">
+							<img src="img/information/jacket_p1.jpg" class="main" alt="「カガミハラ／ジャスティス －子供と◯◯と◯◯の話－ 決定版」ジャケット画像" />
+						</a>
+					</dt>
+					<dd>
+						<div class="title">「カガミハラ／ジャスティス －子供と◯◯と◯◯の話－ 決定版」</div>
+						<dl>
+							<dt>内容物</dt><dd>DVD</dd>
+							<dt>発行日</dt><dd>2012/10/14</dd>
+							<dt>イベント価格</dt><dd>500円</dd>
+						</dl>
+						<p class="mini">
+							※本棚の飾り用パッケージです。プレイする際は上記全部入り版をお求めください。
+						</p>
+						<div class="itaku_title"><a href="https://fragaria.booth.pm/items/1890813" target="_blank">パッケージ販売はこちら</a></div>
+					</dd>
+				</dl>			
+				<h4>頒布終了</h4>
+				<dl class="goods_list old">
 					<dt>
 						<a href="img/information/jacket_06_l.jpg" class="productImage">
 							<img src="img/information/jacket_06.jpg" class="main" alt="「カガミハラ／ジャスティス －子供と大人と戦争の話－」ジャケット画像" />
@@ -131,10 +152,11 @@ $(function(){
 							「カガミハラ／ジャスティス」シリーズついに完結。<br/>
 							彼らは戦争を止められるか――――。
 						</p>
-						<div class="itaku_title"><a href="https://fragaria.booth.pm/items/403922" target="_blank">パッケージ販売はこちら</a></div>
+						<div class="itaku_title"><a href="https://fragaria.booth.pm/items/403922" target="_blank">ダウンロードはこちら</a></div>
 					</dd>
 				</dl>
-				<dl class="goods_list">
+
+				<dl class="goods_list old">
 					<dt>
 						<a href="img/information/jacket_05_l.jpg" class="productImage">
 							<img src="img/information/jacket_05.jpg" class="main" alt="「カガミハラ／ジャスティス －子供と大人と◯◯の話－ 決定版」ジャケット画像" />
@@ -158,27 +180,8 @@ $(function(){
 						<div class="itaku_title"><a href="https://fragaria.booth.pm/items/403881" target="_blank">パッケージ販売はこちら</a></div>
 					</dd>
 				</dl>
-				<dl class="goods_list">
-					<dt>
-						<a href="img/information/jacket_p1_l.jpg" class="productImage">
-							<img src="img/information/jacket_p1.jpg" class="main" alt="「カガミハラ／ジャスティス －子供と◯◯と◯◯の話－ 決定版」ジャケット画像" />
-						</a>
-					</dt>
-					<dd>
-						<div class="title">「カガミハラ／ジャスティス －子供と◯◯と◯◯の話－ 決定版」</div>
-						<dl>
-							<dt>内容物</dt><dd>DVD</dd>
-							<dt>発行日</dt><dd>2012/10/14</dd>
-							<dt>イベント価格</dt><dd>500円</dd>
-						</dl>
-						<p class="mini">
-							※本パッケージはC81,C82発行の2本を収録した決定版です。<br/>
-							※2012年9月時点での修正パッチは全て適用済となっております。
-						</p>
-						<div class="itaku_title"><a href="https://fragaria.booth.pm/items/3887" target="_blank">パッケージ販売はこちら</a></div>
-					</dd>
-				</dl>
-				<dl class="goods_list">
+
+				<dl class="goods_list old">
 					<dt>
 						<a href="img/information/omake_01_l.jpg" class="productImage">
 							<img src="img/information/omake_01.jpg" class="main" alt="「カガミハラ／ジャスティス －子供と大人の裏話－」表紙画像" />
@@ -197,7 +200,7 @@ $(function(){
 							「カガミハラ／ジャスティス」シリーズの制作秘話が満載。
 						</p>
 					</dd>
-				</dl>				<h4>頒布終了</h4>
+				</dl>	
 				<dl class="goods_list old">
 					<dt>
 						<a href="img/information/jacket_05_l.jpg" class="productImage">
