--- a/justice/news.html
+++ b/justice/news.html
@@ -50,7 +50,7 @@
         <ul id="nav_itaku">
             <li class="title"><img src="img/nav_itaku_title.png" alt="委託販売" /></li>
 
-            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li>
+            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li> <li><a href="https://ec.nintendo.com/JP/ja/titles/70010000034306" target="_blank"><img src="img/nav_itaku06.png" alt="Nintendo Switch" class="imghover" /></a></li>
         </ul>
 		<div id="nav_twitter">
 			<a href="https://twitter.com/fragarian" target="_blank"><img src="img/nav_twitter.png" alt="twitter @fragarian" class="imghover" /></a>
@@ -61,7 +61,13 @@
     <div id="main">
         <h2><img src="img/menu_news.png" alt="ニュース"></h2>
         <div class="news_box">
-                        <div class="news_list" id="2019_06_10">
+            <div class="news_list" id="2019_06_10">
+                <p class="date">2020-10-01</p>
+                <p class="content">Nintendo Switch版を2020/10/15(木)より発売いたします。詳細は<a href="https://ec.nintendo.com/JP/ja/titles/70010000034306">ストアページ</a>を御覧ください。</p>
+            </div>
+
+
+            <div class="news_list" id="2019_06_10">
                 <p class="date">2019-06-10</p>
                 <p class="content">WEBサイトを移設しました。</p>
             </div>
