--- a/justice/contact.html
+++ b/justice/contact.html
@@ -52,7 +52,7 @@
         <ul id="nav_itaku">
             <li class="title"><img src="img/nav_itaku_title.png" alt="委託販売" /></li>
 
-            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li>
+            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li> <li><a href="https://ec.nintendo.com/JP/ja/titles/70010000034306" target="_blank"><img src="img/nav_itaku06.png" alt="Nintendo Switch" class="imghover" /></a></li>
         </ul>
 		<div id="nav_twitter">
 			<a href="https://twitter.com/fragarian" target="_blank"><img src="img/nav_twitter.png" alt="twitter @fragarian" class="imghover" /></a>
