--- a/justice/download.html
+++ b/justice/download.html
@@ -50,7 +50,7 @@
         <ul id="nav_itaku">
             <li class="title"><img src="img/nav_itaku_title.png" alt="委託販売" /></li>
 
-            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li>
+            <li><a href="https://fragaria.booth.pm/" target="_blank"><img src="img/nav_itaku05.png" alt="BOOTH" class="imghover" /></a></li> <li><a href="https://ec.nintendo.com/JP/ja/titles/70010000034306" target="_blank"><img src="img/nav_itaku06.png" alt="Nintendo Switch" class="imghover" /></a></li>
         </ul>
 		<div id="nav_twitter">
 			<a href="https://twitter.com/fragarian" target="_blank"><img src="img/nav_twitter.png" alt="twitter @fragarian" class="imghover" /></a>
@@ -70,7 +70,7 @@
 				<p>
 					※上記は外部ページ（Booth）へのリンクです。 <br>
 					※フリー版ではカガミハラ／ジャスティス&nbsp;&nbsp;を最後まで遊ぶことができます。<br>
-					※フリー版にはオマケシナリオは含まれません。オマケシナリオは完全版（<a href="https://fragaria.booth.pm/">Booth</a>にて頒布中）にのみ含まれます。<br>
+					※フリー版にはオマケシナリオは含まれません。オマケシナリオは完全版（<a href="https://fragaria.booth.pm/">Booth</a>または<a href="https://ec.nintendo.com/JP/ja/titles/70010000034306">My Nintendo Store</a>にて頒布中）にのみ含まれます。<br>
 					※各種修正パッチの適用は不要です。<br>
 				</p>
 			</div>
