--- a/index.html
+++ b/index.html
@@ -1,10 +1,201 @@
-<html lang="en-US">
-  <meta charset="utf-8">
-  <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="./justice/">
-  <script>location="./justice/"</script>
-  <meta http-equiv="refresh" content="0; url=./justice/">
-  <meta name="robots" content="noindex">
-  <h1>Redirecting&hellip;</h1>
-  <a href="./justice/">Click here if you are not redirected.</a>
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-28044995-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-28044995-1');
+  </script>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="同人サークル フラガリアの公式サイトです" />
+  <meta property="og:url" content="https://fragaria.info/" />
+  <meta property="og:title" content="webサイトのページ名" />
+  <meta property="og:description" content="同人サークル フラガリアの公式サイトです" />
+  <meta property="og:image" content="https://fragaria.info/assets/image/main_image.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="同人サークル フラガリア 公式サイト" />
+  <meta property="og:locale" content="ja_JP" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@fragarian" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="stylesheet" href="assets/module/slick-1.8.1/slick.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" />
+  </noscript>
+  <title>Fragaria</title>
+</head>
+
+<body class="preloaded">
+  <div class="wrapper">
+    <header>
+      <div class="logo_area">
+        <a href="#top">
+          <svg class="logo" width="100%" height="100%" viewBox="0 0 469 141" version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
+            xmlns:serif="http://www.serif.com/">
+            <use xlink:href="assets/image/circle_logo.svg#circle_logo"></use>
+          </svg>
+        </a>
+      </div>
+      <nav>
+        <ul class="navigation">
+          <li class="nav_text"><a href="#top">TOP</a></li>
+          <li class="nav_text"><a href="#news">NEWS</a></li>
+          <li class="nav_text"><a href="#works">WORKS</a></li>
+          <li class="nav_text"><a href="#about">ABOUT</a></li>
+          <li class="nav_text"><a href="#contact">CONTACT</a></li>
+          <li>
+            <a href="https://twitter.com/fragarian" target="_blank">
+              <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 248 204"
+                style="enable-background:new 0 0 248 204;" xml:space="preserve">
+                <use xlink:href="assets/image/twitter_icon.svg#twitter_icon"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="menu_icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section id="top">
+        <div class="container">
+          <h1>
+            <svg class="logo" viewBox="0 0 469 141" version="1.1" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/">
+              <use xlink:href="assets/image/circle_logo.svg#circle_logo"></use>
+            </svg>
+          </h1>
+          <div class="copy">Fragariaはアドベンチャーゲームを制作する同人サークルです</div>
+        </div>
+      </section>
+      <section class="content show_nav_area" id="news">
+        <h2>NEWS</h2>
+        <div class="container-small">
+          <ul class="news_list">
+            <li>
+              <div class="date">2021.11.12</div>
+              <div class="title">公式サイトをリニューアルしました</div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="content show_nav_area" id="works">
+        <h2>WORKS</h2>
+        <div class="container">
+          <ul class="work_list">
+            <li>
+              <article>
+                <a href="ihanashi/"><img class="main_image" src="assets/image/works/ihanashi.png" /></a>
+                <div class="text">
+                  <div class="title_area">
+                    <h3 class="title">イハナシの魔女</h3>
+                    <dl class="detail">
+                      <div>
+                        <dt>リリース日</dt>
+                        <dd>Summer in 2022</dd>
+                      </div>
+                      <div>
+                        <dt>ジャンル</dt>
+                        <dd>恋愛アドベンチャー</dd>
+                      </div>
+                    </dl>
+                  </div>
+                  <div class="description">
+                    高校一年生の「西銘光」は、あるとき沖縄で暮らすよう言い渡される。しかし、引っ越し先の祖父宅は無人。光は離島で自活を強いられる。そんな折にサトウキビ畑で異国の少女リルゥに出会い……。感動の離島恋愛アドベンチャー。
+                  </div>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <a href="justice/"><img class="main_image" src="assets/image/works/kagamihara.png" /></a>
+                <div class="text">
+                  <div class="title_area">
+                    <h3 class="title">カガミハラ／ジャスティス</h3>
+                    <dl class="detail">
+                      <div>
+                        <dt>リリース日</dt>
+                        <dd>2017.08.11</dd>
+                      </div>
+                      <div>
+                        <dt>ジャンル</dt>
+                        <dd>一本道アドベンチャー</dd>
+                      </div>
+                    </dl>
+                  </div>
+                  <div class="description">
+                    転校生の「村上太陽」は美少女クラスメートに勧誘され新聞部に入部する。最初の仕事は学校に現れたヒーローを追いかけること。ところが、話は思わぬ方向に……。学園生活から始まる絶対に先が読めないサスペンスミステリー。
+                  </div>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="content" id="about">
+        <h2>ABOUT</h2>
+        <div class="container">
+          <div class="copy">価値観を変えるストーリーを</div>
+        </div>
+        <div class="container-small">
+          ストーリーには力があります。<br>
+          <br>
+          「小さい頃に読んだ話が大人になってもずっと頭に残っている」<br>
+          <br>
+          「つらいときにゲームのキャラクターを思い出したら元気になれた」<br>
+          <br>
+          そんな経験をしてきた人にはもう一度その体験を味わって欲しいですし、まだ経験していない人にはつらいときにこそアドベンチャーゲームを遊んで欲しいと思っています。<br>
+          <br>
+          ストーリーは新しいものの見方を教えてくれたり、困難を乗り越える力を与えてくれたり、人生に影響を与えうる可能性を秘めています。<br>
+          <br>
+          Fragariaはそんな力のあるストーリーを生み出すことを目的としています。
+        </div>
+      </section>
+      <section class="content" id="contact">
+        <h2>CONTACT</h2>
+        <div class="container-small">
+          <p>お問い合わせは下記のメールにお願いします。</p>
+          <address><a href="mailto:fragaria.info@gmail.com">fragaria.info@gmail.com</a></address>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer_links">
+        <a href="https://twitter.com/fragarian" target="_blank">
+          <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 248 204"
+            style="enable-background:new 0 0 248 204;" xml:space="preserve">
+            <use xlink:href="assets/image/twitter_icon.svg#twitter_icon"></use>
+          </svg>
+        </a>
+        <div><a href="mailto:fragaria.info@gmail.com">fragaria.info@gmail.com</a></div>
+      </div>
+      <div class="copyright">
+        <svg class="logo" x="0px" y="0px" viewBox="0 0 469 141" version="1.1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/">
+          <use xlink:href="assets/image/circle_logo.svg#circle_logo"></use>
+        </svg>
+        <div class="copyright">© Fragaria All Rights Reserved.</div>
+      </div>
+    </footer>
+  </div>
+  <div class="load_overlay"></div>
+  <script src="assets/module/jquery-3.5.1.min.js"></script>
+  <script src="assets/module/slick-1.8.1/slick.min.js"></script>
+  <script src="assets/js/main.js" type="module"></script>
+</body>
+
 </html>
