--- a/justice/index.html
+++ b/justice/index.html
@@ -86,6 +86,16 @@
                 <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Ffragaria.info%2Fjustice%2F" target="_blank" onclick="snsWin(this.href,'pop_fb');return false;"><img src="img/facebook.png" alt="Share facebook" class="imghover" /></a>
             </li>
             <li class="copy">
+                <!--official-->
+                
+       		 <a class="circle_logo" href="../">
+         		 <svg class="logo" x="0px" y="0px" viewBox="0 0 469 141" version="1.1" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/">
+            	<use xlink:href="img/circle_logo.svg#circle_logo"></use>
+          	</svg>
+        	</a>
+            </li>
+            <li class="copy">
                 Copyright &copy; 2013- Fragaria All Rights Reserved.
             </li>
         </ul>
