--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -26,7 +26,7 @@
   <meta name="twitter:site" content="@fragarian" />
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="assets/module/slick-1.8.1/slick.css" />
-<!--  <link rel="stylesheet" href="assets/module/aos-2.3.4/aos.css" /> -->
+  <link rel="stylesheet" href="assets/module/aos-2.3.4/aos.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css" />
@@ -413,12 +413,11 @@
   <script src="assets/module/slick-1.8.1/slick.min.js"></script>
   <script src="assets/module/aos-2.3.4/aos.js"></script>
   <script src="assets/js/main.js" ></script>
-<!--  <script>
+  <script>
         AOS.init({
         duration: 1000
     });
   </script>
--->
 </body>
 
 </html>
