--- a/index.html
+++ b/index.html
@@ -108,12 +108,17 @@
                     <h3 class="title">イハナシの魔女</h3>
                     <dl class="detail">
                       <div>
-                        <dt>リリース日</dt>
+                        <dt>リリース</dt>
                         <dd>Summer in 2022</dd>
                       </div>
                       <div>
                         <dt>ジャンル</dt>
                         <dd>恋愛アドベンチャー</dd>
+                      </div>
+
+                      <div>
+                        <dt>PF</dt>
+                        <dd>PC（予定）</dd>
                       </div>
                     </dl>
                   </div>
@@ -131,13 +136,18 @@
                     <h3 class="title">カガミハラ／ジャスティス</h3>
                     <dl class="detail">
                       <div>
-                        <dt>リリース日</dt>
+                        <dt>リリース</dt>
                         <dd>2017.08.11</dd>
                       </div>
                       <div>
                         <dt>ジャンル</dt>
                         <dd>一本道アドベンチャー</dd>
                       </div>
+                      <div>
+                        <dt>PF</dt>
+                        <dd>PC/Nintendo Switch</dd>
+                      </div>
+
                     </dl>
                   </div>
                   <div class="description">
