Officialの文言修正

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h3 class="title">イハナシの魔女</h3>
                     <dl class="detail">
                       <div>
-                        <dt>リリース</dt>
+                        <dt>発売日</dt>
                         <dd>Summer in 2022</dd>
                       </div>
                       <div>
@@ -117,7 +117,7 @@
                       </div>
 
                       <div>
-                        <dt>PF</dt>
+                        <dt>リリース</dt>
                         <dd>PC（予定）</dd>
                       </div>
                     </dl>
@@ -136,7 +136,7 @@
                     <h3 class="title">カガミハラ／ジャスティス</h3>
                     <dl class="detail">
                       <div>
-                        <dt>リリース</dt>
+                        <dt>発売日</dt>
                         <dd>2017.08.11</dd>
                       </div>
                       <div>
@@ -144,7 +144,7 @@
                         <dd>一本道アドベンチャー</dd>
                       </div>
                       <div>
-                        <dt>PF</dt>
+                        <dt>リリース</dt>
                         <dd>PC/Nintendo Switch</dd>
                       </div>
 
