official/ihanashi added news

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         <div class="container-small">
           <ul class="news_list">
 	    <li>
+            <div class="date">2021.12.31</div>
+            <div class="title">コミックマーケット99に参加しました。ご来場いただいた皆様、ありがとうございました。</div>
+	    </li>
+	    <li>
             <div class="date">2021.11.12</div>
             <div class="title">コミックマーケット99に参加します。<a href="https://webcatalog.circle.ms/Circle/Map/15706638/1 ">MAP「金曜日 東地区 "タ" ブロック 34b」</a></div>
 	    </li>
