ihanashi add Booth link

--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -102,11 +102,10 @@
 
          <div class="container banner_list">
         <!--
-
-	    <a href="" target="_blank"><img src="assets/image/banner_booth.png"></a>
             <a href="" target="_blank"><img src="assets/image/banner_steam.png"></a>
             <a href="" target="_blank"><img src="assets/image/banner_dlsite.png"></a>
 	-->
+	    <a href="https://fragaria.booth.pm/" target="_blank"><img src="assets/image/banner_booth.png"></a>
 
           </div>
 
@@ -116,6 +115,10 @@
       <section class="content show_nav_area" id="news">
         <h2>NEWS</h2>
         <ul class="news_list">
+	  <li>
+            <div class="date">2022.01.03</div>
+            <div class="title"><a href="https://fragaria.booth.pm/">Booth</a>にC99体験版を公開しました。</div>
+	  </li>
 	  <li>
             <div class="date">2021.12.31</div>
             <div class="title">コミックマーケット99に参加しました。ご来場いただいた皆様、ありがとうございました。</div>
@@ -350,7 +353,7 @@
                 </div>
                 <div>
                   <dt>配信</dt>
-                  <dd><a href="" target="_blank">Steam</a> / <a href="" target="_blank">BOOTH</a> / <a href="" target="_blank">DLsite</a></dd>
+                  <dd><a href="" target="_blank">Steam</a> / <a href="https://fragaria.booth.pm/">BOOTH</a> / <a href="" target="_blank">DLsite</a></dd>
                 </div>
                 <div>
                   <dt>発売日</dt>
