modify about message

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <section class="content" id="about">
         <h2>ABOUT</h2>
         <div class="container">
-          <div class="copy">価値観を変えるストーリーを</div>
+          <div class="copy">価値観を変える</div>
         </div>
         <div class="container-small">
           ストーリーには力があります。<br>
