Ihanashiメタタグを少し修正

--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -14,10 +14,10 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="イハナシの魔女 公式サイトです。ゲーム紹介や更新情報をお届けします。" />
+  <meta name="description" content="ビジュアルノベル「イハナシの魔女」の公式サイトです。ゲーム紹介や更新情報をお届けします。" />
   <meta property="og:url" content="https://fragaria.info/ihanashi/" />
   <meta property="og:title" content="イハナシの魔女 公式サイト" />
-  <meta property="og:description" content="イハナシの魔女 公式サイトです。ゲーム紹介や更新情報をお届けします。" />
+  <meta property="og:description" content="ビジュアルノベル「イハナシの魔女」の公式サイトです。ゲーム紹介や更新情報をお届けします。" />
   <meta property="og:image" content="https://fragaria.info/ihanashi/assets/image/main_image.png" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="イハナシの魔女" />
