スクショ修正、メタタグ追加

--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -24,6 +24,7 @@
   <meta property="og:locale" content="ja_JP" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@fragarian" />
+  <meta name="keywords" content="イハナシの魔女,イハナシの魔女中国語版,イハナシの魔女中訳版,アドベンチャーゲーム,美少女アドベンチャーゲーム,ADV,fragaria,沖縄">
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="assets/module/slick-1.8.1/slick.css" />
   <link rel="stylesheet" href="assets/module/aos-2.3.4/aos.css" />
@@ -53,6 +54,7 @@
         <li><a href="#character">CHARACTER</a></li>
         <li><a href="#gallery">GALLERY</a></li>
         <li><a href="#information">INFORMATION</a></li>
+        <li>JP/<a href="./index_cn.html">CN</a></li>
         <li>
           <a href="https://twitter.com/fragarian" target="_blank">
             <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
