Steamのバナー追加

--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -104,10 +104,10 @@
 
     <div class="container banner_list">
       <!--
-      <a href="" target="_blank"><img src="assets/image/banner_steam.png"></a>
       <a href="" target="_blank"><img src="assets/image/banner_dlsite.png"></a>
     -->
-    <a href="https://fragaria.booth.pm/" target="_blank"><img src="assets/image/banner_booth.png"></a>
+      <a href="https://store.steampowered.com/app/1950570/_/" target="_blank"><img src="assets/image/banner_steam.png"></a>
+      <a href="https://fragaria.booth.pm/" target="_blank"><img src="assets/image/banner_booth.png"></a>
 
   </div>
 
@@ -117,6 +117,12 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
+
+    <li>
+      <div class="date">2022.5.22</div>
+      <div class="title">無料体験版を公開しました。<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>からダウンロードできます</div>
+    </li>
+
     <li>
       <div class="date">2022.4.24</div>
       <div class="title">PVを公開しました。Youtubeへのリンクは<a href=https://youtu.be/uhz_r5q1mB0>こちら</a></div>
