ADD CV INFOMATION

--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -78,6 +78,7 @@
       <li><a href="#character">CHARACTER</a></li>
       <li><a href="#gallery">GALLERY</a></li>
       <li><a href="#information">INFORMATION</a></li>
+      <li><a href="./index_cn.html">CN</a></li>
       <li>
         <a href="https://twitter.com/fragarian" target="_blank">
           <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
@@ -117,6 +118,15 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
+    <li>
+      <div class="date">2022.6.18</div>
+      <div class="title">CVの情報を掲載しました</div>
+    </li>
+
+    <li>
+      <div class="date">2022.6.13</div>
+      <div class="title">Steam Next Festに参加しました。<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>はこちら</div>
+    </li>
 
     <li>
       <div class="date">2022.5.22</div>
@@ -135,11 +145,11 @@
       <div class="date">2022.01.03</div>
       <div class="title"><a href="https://fragaria.booth.pm/">Booth</a>にC99体験版を公開しました。</div>
     </li>
+    <!--
     <li>
       <div class="date">2021.12.31</div>
       <div class="title">コミックマーケット99に参加しました。ご来場いただいた皆様、ありがとうございました。</div>
     </li>
-<!--
     <li>
       <div class="date">2021.11.12</div>
       <div class="title">コミックマーケット99に参加します。<a href="https://webcatalog.circle.ms/Circle/Map/15706638/1 ">MAP「金曜日 東地区 "タ" ブロック 34b」</a></div>
@@ -224,6 +234,7 @@
           <div class="caption">
             <div class="name">リルゥ・ジャミティダ</div>
             <div class="name_en">Lilun Jaminthida</div>
+            <div class="name_cv">CV　ばるう</div>
             <div class="description">
               <p>渡夜時島の山でハブを狩る国籍不明の女子。</p>
               <p>サトウキビ畑に小屋を建てて生活する。年齢は高校生程度。</p>
@@ -238,6 +249,7 @@
           <div class="caption">
             <div class="name">赤摘 明</div>
             <div class="name_en">Akatsumi Akari</div>
+            <div class="name_cv">CV　九重なゆ</div>
             <div class="description">
               <p>島一番の美少女15歳。</p>
               <p>将来の夢は東京に行ってXXになること（XXには親には言えない単語が入る）。</p>
@@ -252,6 +264,7 @@
           <div class="caption">
             <div class="name">比嘉 紬</div>
             <div class="name_en">Higa Tsumugi</div>
+            <div class="name_cv">CV　ミコト</div>
             <div class="description">
               <p>保険販売員として働く24歳。</p>
               <p>仕事がうまくいかずに苦悩する日々を送る。</p>
@@ -280,6 +293,7 @@
           <div class="caption">
             <div class="name">勲茶殿 妃里子</div>
             <div class="name_en">Kunsaden Kiriko</div>
+            <div class="name_cv">CV　夜宵紫苑</div>
             <div class="description">
               ヲーッホッホッホッホッホッ！！！！　ワタクシは島で最もお金持ちですわ！　将来の夢は沖縄一のリゾートホテルの社長でしてよ！　え！？　髪を美しく保つ工夫ですの！？　ウフフフ、お手入れを欠かさないことですわ！！！！！
             </div>
@@ -292,6 +306,7 @@
           <div class="caption">
             <div class="name">兼城丈</div>
             <div class="name_en">Kaneshiro Joe</div>
+            <div class="name_cv">CV　フルゴオリ</div>
             <div class="description">
               <p>リゾートで有名な久々島在住の不良。</p>
               <p>ヤンキー集団を取りまとめるリーダーであり金さえ払われれば、どんな汚れ仕事も引き受ける。</p>
