--- a/ihanashi/index_cn.html
+++ b/ihanashi/index_cn.html
@@ -74,6 +74,7 @@
       <li><a href="#character">CHARACTER</a></li>
       <li><a href="#gallery">GALLERY</a></li>
       <li><a href="#information">INFORMATION</a></li>
+      <li><a href="./index.html">JP</a></li>
       <li>
         <a href="https://twitter.com/fragarian" target="_blank">
           <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
@@ -183,6 +184,7 @@
           <div class="caption">
             <div class="name">莉露・杰米蒂达</div>
             <div class="name_en">Lilun Jaminthida</div>
+            <div class="name_cv">CV　ばるう</div>
             <div class="description">
               <p>在渡夜时岛的山中狩猎有毒蝮蛇的国籍不明的女子。</p>
               <p>莉露生活在甘蔗地中一处自行搭建的临时小屋中。大约是高中生的年龄。</p>
@@ -197,6 +199,7 @@
           <div class="caption">
             <div class="name">赤摘 明</div>
             <div class="name_en">Akatsumi Akari</div>
+            <div class="name_cv">CV　九重なゆ</div>
             <div class="description">
               <p>岛上No.1的美少女，15岁。</p>
               <p>梦想是去东京成为XX（XX是不能和父母提起的某个词汇）。</p>
@@ -211,6 +214,7 @@
           <div class="caption">
             <div class="name">比嘉 紬</div>
             <div class="name_en">Higa Tsumugi</div>
+            <div class="name_cv">CV　ミコト</div>
             <div class="description">
               <p>保险推销员，24岁。</p>
               <p>她的工作不怎么顺利，几乎每天都活在烦恼之中。</p>
@@ -239,6 +243,7 @@
           <div class="caption">
             <div class="name">勲茶殿 妃里子</div>
             <div class="name_en">Kunsaden Kiriko</div>
+            <div class="name_cv">CV　夜宵紫苑</div>
             <div class="description">
               喔嚯嚯嚯嚯！！！！本小姐可是这座岛上最有钱的人！未来的梦想是成为冲绳第一的度假村的社长哟！哎！？如何保养如此美丽的头发！？唔哼哼哼哼，这可得花不少心思喔！！！！
             </div>
@@ -251,6 +256,7 @@
           <div class="caption">
             <div class="name">兼城 丈</div>
             <div class="name_en">Kaneshiro Joe</div>
+            <div class="name_cv">CV　フルゴオリ</div>
             <div class="description">
               <p>居住在作为度假胜地而极富盛名的久久岛的不良少年。</p>
               <p>丈作为小流氓团伙的带头大哥，只要肯出钱，再脏再累的活他都肯接。</p>
