--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -119,15 +119,24 @@
   <h2>NEWS</h2>
   <ul class="news_list">
     <li>
+      <div class="date">2022.7.07</div>
+      <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
+    </li>
+
+    <li>
       <div class="date">2022.6.18</div>
       <div class="title">CVの情報を掲載しました</div>
     </li>
-
+    <li>
+      <div class="date">2022.6.10</div>
+      <div class="title"><a href=https://www.comiket.co.jp/>コミックマーケット100</a>へ参加します。ブース：<a href=https://webcatalog-free.circle.ms/Circle/16202649>土曜日西地区 こ 01a</a></div>
+    </li>
+<!--
     <li>
       <div class="date">2022.6.13</div>
       <div class="title">Steam Next Festに参加しました。<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>はこちら</div>
     </li>
-
+-->
     <li>
       <div class="date">2022.5.22</div>
       <div class="title">無料体験版を公開しました。<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>からダウンロードできます</div>
@@ -137,10 +146,12 @@
       <div class="date">2022.4.24</div>
       <div class="title">PVを公開しました。Youtubeへのリンクは<a href=https://youtu.be/uhz_r5q1mB0>こちら</a></div>
     </li>
+<!--
     <li>
       <div class="date">2022.4.20</div>
       <div class="title"><a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>を公開しました</div>
     </li>
+-->
     <li>
       <div class="date">2022.01.03</div>
       <div class="title"><a href="https://fragaria.booth.pm/">Booth</a>にC99体験版を公開しました。</div>
