--- a/index.html
+++ b/index.html
@@ -85,7 +85,14 @@
   <h2>NEWS</h2>
   <div class="container-small">
     <ul class="news_list">
-
+        <li>
+          <div class="date">2022.7.07</div>
+          <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
+        </li>
+        <li>
+          <div class="date">2022.6.10</div>
+          <div class="title"><a href=https://www.comiket.co.jp/>コミックマーケット100</a>へ参加します。ブース：<a href=https://webcatalog-free.circle.ms/Circle/16202649>土曜日西地区 こ 01a</a></div>
+        </li>
       <li>
         <div class="date">2022.4.24</div>
         <div class="title">イハナシの魔女のPVを公開しました。Youtubeへのリンクは<a href=https://youtu.be/uhz_r5q1mB0>こちら</a></div>
