update ihanashi news

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
           <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
         </li>
         <li>
+          <div class="date">2022.7.07</div>
+          <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
+        </li>
+        <li>
           <div class="date">2022.6.10</div>
           <div class="title"><a href=https://www.comiket.co.jp/>コミックマーケット100</a>へ参加します。ブース：<a href=https://webcatalog-free.circle.ms/Circle/16202649>土曜日西地区 こ 01a</a></div>
         </li>
@@ -97,7 +101,7 @@
         <div class="date">2022.4.24</div>
         <div class="title">イハナシの魔女のPVを公開しました。Youtubeへのリンクは<a href=https://youtu.be/uhz_r5q1mB0>こちら</a></div>
       </li>
-      <li>
+<!--      <li>
         <div class="date">2022.4.20</div>
         <div class="title">イハナシの魔女の<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>を公開しました</div>
       </li>
@@ -105,7 +109,7 @@
         <div class="date">2021.12.31</div>
         <div class="title">コミックマーケット99に参加しました。ご来場いただいた皆様、ありがとうございました。</div>
       </li>
-      <!--	    <li>
+      	    <li>
       <div class="date">2021.11.12</div>
       <div class="title">コミックマーケット99に参加します。<a href="https://webcatalog.circle.ms/Circle/Map/15706638/1 ">MAP「金曜日 東地区 "タ" ブロック 34b」</a></div>
     </li>
