--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -119,6 +119,11 @@
   <h2>NEWS</h2>
   <ul class="news_list">
     <li>
+      <div class="date">2022.8.05</div>
+      <div class="title"><a href=https://store.steampowered.com/app/1950570/_/>Steam</a>/<a href="https://fragaria.booth.pm/">Booth</a>版のリリース日が8/20に決まりました</div>
+    </li>
+
+    <li>
       <div class="date">2022.7.07</div>
       <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
     </li>
@@ -137,6 +142,7 @@
       <div class="title">Steam Next Festに参加しました。<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>はこちら</div>
     </li>
 -->
+<!--
     <li>
       <div class="date">2022.5.22</div>
       <div class="title">無料体験版を公開しました。<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>からダウンロードできます</div>
@@ -146,17 +152,18 @@
       <div class="date">2022.4.24</div>
       <div class="title">PVを公開しました。Youtubeへのリンクは<a href=https://youtu.be/uhz_r5q1mB0>こちら</a></div>
     </li>
-<!--
+
     <li>
       <div class="date">2022.4.20</div>
       <div class="title"><a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>を公開しました</div>
     </li>
 -->
+   <!--
     <li>
       <div class="date">2022.01.03</div>
       <div class="title"><a href="https://fragaria.booth.pm/">Booth</a>にC99体験版を公開しました。</div>
     </li>
-    <!--
+ 
     <li>
       <div class="date">2021.12.31</div>
       <div class="title">コミックマーケット99に参加しました。ご来場いただいた皆様、ありがとうございました。</div>
@@ -397,11 +404,11 @@
           </div>
           <div>
             <dt>配信</dt>
-            <dd><a href="https://store.steampowered.com/app/1950570/_/" target="_blank">Steam</a> / <a href="https://fragaria.booth.pm/">BOOTH</a> / <a href="" target="_blank">DLsite</a></dd>
+            <dd><a href="https://store.steampowered.com/app/1950570/_/" target="_blank">Steam</a> / <a href="https://fragaria.booth.pm/">BOOTH</a> </dd>
           </div>
           <div>
             <dt>発売日</dt>
-            <dd>2022年夏（体験版：2021年冬）</dd>
+            <dd>2022年8月20日</dd>
           </div>
         </dl>
         <dl class="system_requirement">
