ihanashi add guideline

--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -118,6 +118,11 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
+
+      <li>
+        <div class="date">2022.8.13</div>
+        <div class="title"><a href=#information>INFORMATION</a>に配信ガイドラインを追加しました</div>
+      </li>
     <li>
       <div class="date">2022.8.05</div>
       <div class="title"><a href=https://store.steampowered.com/app/1950570/_/>Steam</a>/<a href="https://fragaria.booth.pm/">Booth</a>版のリリース日が8/20に決まりました</div>
@@ -127,7 +132,7 @@
       <div class="date">2022.7.07</div>
       <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
     </li>
-
+<!--
     <li>
       <div class="date">2022.6.18</div>
       <div class="title">CVの情報を掲載しました</div>
@@ -136,7 +141,7 @@
       <div class="date">2022.6.10</div>
       <div class="title"><a href=https://www.comiket.co.jp/>コミックマーケット100</a>へ参加します。ブース：<a href=https://webcatalog-free.circle.ms/Circle/16202649>土曜日西地区 こ 01a</a></div>
     </li>
-<!--
+
     <li>
       <div class="date">2022.6.13</div>
       <div class="title">Steam Next Festに参加しました。<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>はこちら</div>
@@ -163,7 +168,7 @@
       <div class="date">2022.01.03</div>
       <div class="title"><a href="https://fragaria.booth.pm/">Booth</a>にC99体験版を公開しました。</div>
     </li>
- 
+
     <li>
       <div class="date">2021.12.31</div>
       <div class="title">コミックマーケット99に参加しました。ご来場いただいた皆様、ありがとうございました。</div>
@@ -426,6 +431,10 @@
           </div>
         </dl>
       </div>
+    </div>
+    <div id="guideline" style="margin-top: 30px;">
+    <h3>GUIDELINE</h3>
+      <p>本作は動画サイトで配信することが可能です。配信で作品の全貌が明らかになってしまうため、なるべく視聴者の皆様に作品の購入を勧めていただけると助かります。また、作中の画像、イラスト、音楽等の著作権は著作者にありますので配信以外での利用は禁止されています。</p>
     </div>
   </div>
 </section>
