Booth mail order news

--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -118,7 +118,10 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
-
+    <li>
+      <div class="date">2022.8.14</div>
+      <div class="title"><a href=https://fragaria.booth.pm/items/4075482>Booth</a>にてパッケージ版通販の受付を開始しました</div>
+    </li>
       <li>
         <div class="date">2022.8.13</div>
         <div class="title"><a href=#information>INFORMATION</a>に配信ガイドラインを追加しました</div>
