--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
   <h2>NEWS</h2>
   <div class="container-small">
     <ul class="news_list">
-        <li>
-          <div class="date">2022.7.07</div>
-          <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
-        </li>
+      <li>
+        <div class="date">2022.8.14</div>
+        <div class="title"><a href=https://fragaria.booth.pm/items/4075482>Booth</a>にて「イハナシの魔女」パッケージ版通販の受付を開始しました</div>
+      </li>
         <li>
           <div class="date">2022.7.07</div>
           <div class="title"><a href=https://tgs.nikkeibp.co.jp/tgs/2022/jp/index.html>東京ゲームショウ2022</a>への出展が決まりました</div>
@@ -97,11 +97,11 @@
           <div class="date">2022.6.10</div>
           <div class="title"><a href=https://www.comiket.co.jp/>コミックマーケット100</a>へ参加します。ブース：<a href=https://webcatalog-free.circle.ms/Circle/16202649>土曜日西地区 こ 01a</a></div>
         </li>
-      <li>
+<!--       <li>
         <div class="date">2022.4.24</div>
         <div class="title">イハナシの魔女のPVを公開しました。Youtubeへのリンクは<a href=https://youtu.be/uhz_r5q1mB0>こちら</a></div>
       </li>
-<!--      <li>
+     <li>
         <div class="date">2022.4.20</div>
         <div class="title">イハナシの魔女の<a href=https://store.steampowered.com/app/1950570/>Steamストアページ</a>を公開しました</div>
       </li>
