--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -118,6 +118,12 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
+
+    <li>
+      <div class="date">2022.8.20</div>
+      <div class="title"><a href=https://store.steampowered.com/app/1950570/_/>Steam</a>/<a href="https://fragaria.booth.pm/">Booth</a>にてDL版をリリースしました。パッケージ版との差異は<a href=https://fragaria.booth.pm/items/4075482>パッケージ版ページ</a>のパッケージ版特典をご覧ください</div>
+    </li>
+
     <li>
       <div class="date">2022.8.14</div>
       <div class="title"><a href=https://fragaria.booth.pm/items/4075482>Booth</a>にてパッケージ版通販の受付を開始しました</div>
