--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
   <div class="container-small">
     <ul class="news_list">
       <li>
+        <div class="date">2022.8.20</div>
+        <div class="title">イハナシの魔女 DL版を<a href=https://store.steampowered.com/app/1950570/_/>Steam</a>/<a href="https://fragaria.booth.pm/">Booth</a>にてリリースしました。パッケージ版との差異は<a href=https://fragaria.booth.pm/items/4075482>パッケージ版ページ</a>のパッケージ版特典をご覧ください</div>
+      </li>
+      <li>
         <div class="date">2022.8.14</div>
         <div class="title"><a href=https://fragaria.booth.pm/items/4075482>Booth</a>にて「イハナシの魔女」パッケージ版通販の受付を開始しました</div>
       </li>
