--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -116,7 +116,10 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
-
+    <li>
+      <div class="date">2022.8.24</div>
+      <div class="title">イハナシの魔女 DL版を<a href="https://www.dlsite.com/home/work/=/product_id/RJ410787.html">DLsite</a>にてリリースしました</div>
+    </li>
     <li>
       <div class="date">2022.8.20</div>
       <div class="title"><a href=https://store.steampowered.com/app/1950570/_/>Steam</a>/<a href="https://fragaria.booth.pm/">Booth</a>にてDL版をリリースしました。パッケージ版との差異は<a href=https://fragaria.booth.pm/items/4075482>パッケージ版ページ</a>のパッケージ版特典をご覧ください</div>
@@ -416,7 +419,7 @@
           </div>
           <div>
             <dt>配信</dt>
-            <dd><a href="https://store.steampowered.com/app/1950570/_/" target="_blank">Steam</a> / <a href="https://fragaria.booth.pm/">BOOTH</a> </dd>
+            <dd><a href="https://store.steampowered.com/app/1950570/_/" target="_blank">Steam</a> / <a href="https://fragaria.booth.pm/">BOOTH</a>/ <a href="https://www.dlsite.com/home/work/=/product_id/RJ410787.html">DLsite</a> </dd>
           </div>
           <div>
             <dt>発売日</dt>
