--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -116,8 +116,12 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
+    <li>
+      <div class="date">2023.1.04</div>
+      <div class="title">イハナシの魔女Appendを<a href=https://fragaria.booth.pm/>BOOTH</a>にて発売しました</div>
+    </li>
       <li>
-        <div class="date">2023.12.31</div>
+        <div class="date">2022.12.31</div>
         <div class="title">コミックマーケット101に参加します。<a href=https://webcatalog-free.circle.ms/Circle/16807069>ブース：C101土曜（2日目）西地区“く”28b</a></div>
       </li>
     <li>
