--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
   <div class="container-small">
     <ul class="news_list">
     <li>
+      <div class="date">2023.2.20</div>
+      <div class="title">イハナシの魔女が<a href=https://www.dlsite.com/modpub/lp/home/dlsiteawards2022/result/
+>DLsiteアワード2022</a>のゲーム部門にて受賞いたしました</div>
+    </li>
+
+
+    <li>
       <div class="date">2023.1.04</div>
       <div class="title">イハナシの魔女Appendを<a href=https://fragaria.booth.pm/>BOOTH</a>にて発売しました</div>
     </li>
@@ -95,7 +102,10 @@
         <div class="title">コミックマーケット101に参加します。<a href=https://webcatalog-free.circle.ms/Circle/16807069>ブース：C101土曜（2日目）西地区“く”28b</a></div>
       </li>
       <li>
-
+      <li>
+        <div class="date">2022.11.16</div>
+        <div class="title">イハナシの魔女が優れたインディーゲームを表彰する<a href=https://indie.live-expo.games/awards/>INDIE Live Expo Awards 2022</a>にノミネートされました</div>
+      </li>
 
         <div class="date">2022.8.24</div>
         <div class="title">イハナシの魔女 DL版を<a href="https://www.dlsite.com/home/work/=/product_id/RJ410787.html">DLsite</a>にてリリースしました</div>
