--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -117,12 +117,23 @@
   <h2>NEWS</h2>
   <ul class="news_list">
     <li>
+      <div class="date">2023.2.20</div>
+      <div class="title">イハナシの魔女が<a href=https://www.dlsite.com/modpub/lp/home/dlsiteawards2022/result/
+>DLsiteアワード2022</a>のゲーム部門にて受賞いたしました</div>
+    </li>
+
+    <li>
       <div class="date">2023.1.04</div>
       <div class="title">イハナシの魔女Appendを<a href=https://fragaria.booth.pm/>BOOTH</a>にて発売しました</div>
     </li>
       <li>
         <div class="date">2022.12.31</div>
         <div class="title">コミックマーケット101に参加します。<a href=https://webcatalog-free.circle.ms/Circle/16807069>ブース：C101土曜（2日目）西地区“く”28b</a></div>
+      </li>
+
+      <li>
+        <div class="date">2022.11.16</div>
+        <div class="title">イハナシの魔女が優れたインディーゲームを表彰する<a href=https://indie.live-expo.games/awards/>INDIE Live Expo Awards 2022</a>にノミネートされました</div>
       </li>
     <li>
       <div class="date">2022.8.24</div>
