--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -116,25 +116,40 @@
 <section class="content show_nav_area" id="news">
   <h2>NEWS</h2>
   <ul class="news_list">
+
+    <li>
+      <div class="date">2023.6.11</div>
+      <div class="title">コミックマーケット102にてイハナシの魔女グッズを頒布予定です。Webカタログは<a href=https://webcatalog-free.circle.ms/Circle/17307525>こちら</a></div>
+    </li>
+    <li>
+      <div class="date">2023.6.04</div>
+      <div class="title">イハナシの魔女が<a href=http://southerncross.sakura.ne.jp/of_the_Year/2022b.htm
+>同人ゲーム・オブ・ザ・イヤー2022</a>にて「主演男優賞」「主演女優賞」「泣き部門賞」を受賞いたしました</div>
+    </li>
     <li>
       <div class="date">2023.2.20</div>
       <div class="title">イハナシの魔女が<a href=https://www.dlsite.com/modpub/lp/home/dlsiteawards2022/result/
 >DLsiteアワード2022</a>のゲーム部門にて受賞いたしました</div>
     </li>
-
     <li>
       <div class="date">2023.1.04</div>
       <div class="title">イハナシの魔女Appendを<a href=https://fragaria.booth.pm/>BOOTH</a>にて発売しました</div>
     </li>
       <li>
         <div class="date">2022.12.31</div>
-        <div class="title">コミックマーケット101に参加します。<a href=https://webcatalog-free.circle.ms/Circle/16807069>ブース：C101土曜（2日目）西地区“く”28b</a></div>
+        <div class="title"><a href=https://automaton-media.com/articles/columnjp/20221231-232414/>AUTOMATONライター陣が選ぶ「ゲーム・オブ・ザ・イヤー 2022」</a>にてイハナシの魔女が紹介されました</div>
       </li>
-      <li>
+         <li>
         <div class="date">2022.11.16</div>
         <div class="title">イハナシの魔女が優れたインディーゲームを表彰する<a href=https://indie.live-expo.games/awards/>INDIE Live Expo Awards 2022</a>にノミネートされました</div>
       </li>
-<!--     <li>
+<!--
+      <li>
+        <div class="date">2022.12.31</div>
+        <div class="title">コミックマーケット101に参加します。<a href=https://webcatalog-free.circle.ms/Circle/16807069>ブース：C101土曜（2日目）西地区“く”28b</a></div>
+      </li>
+
+     <li>
       <div class="date">2022.8.24</div>
       <div class="title">イハナシの魔女 DL版を<a href="https://www.dlsite.com/home/work/=/product_id/RJ410787.html">DLsite</a>にてリリースしました</div>
     </li>
