--- a/ihanashi/index_cn.html
+++ b/ihanashi/index_cn.html
@@ -50,7 +50,7 @@
         <li><a href="#character">CHARACTER</a></li>
         <li><a href="#gallery">GALLERY</a></li>
         <li><a href="#information">INFORMATION</a></li>
-        <li><a href="./index.html">JP</a>/CN</li>
+        <li><a href="./index.html">JP</a>/CN/<a href="./index_ko.html">KO</a></li>
         <li>
           <a href="https://twitter.com/fragarian" target="_blank">
             <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
@@ -74,7 +74,7 @@
       <li><a href="#character">CHARACTER</a></li>
       <li><a href="#gallery">GALLERY</a></li>
       <li><a href="#information">INFORMATION</a></li>
-      <li><a href="./index.html">JP</a></li>
+      <li><a href="./index.html">JP</a>/<a href="./index_ko.html">KO</a></li>
       <li>
         <a href="https://twitter.com/fragarian" target="_blank">
           <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
