--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -54,7 +54,7 @@
         <li><a href="#character">CHARACTER</a></li>
         <li><a href="#gallery">GALLERY</a></li>
         <li><a href="#information">INFORMATION</a></li>
-        <li>JP/<a href="./index_cn.html">CN</a></li>
+        <li>JP/<a href="./index_cn.html">CN</a>/<a href="./index_ko.html">KO</a></li>
         <li>
           <a href="https://twitter.com/fragarian" target="_blank">
             <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
@@ -78,7 +78,7 @@
       <li><a href="#character">CHARACTER</a></li>
       <li><a href="#gallery">GALLERY</a></li>
       <li><a href="#information">INFORMATION</a></li>
-      <li><a href="./index_cn.html">CN</a></li>
+      <li><a href="./index_cn.html">CN</a>/<a href="./index_ko.html">KO</a></li>
       <li>
         <a href="https://twitter.com/fragarian" target="_blank">
           <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
