--- a/ihanashi/index_ko.html
+++ b/ihanashi/index_ko.html
@@ -74,8 +74,8 @@
       <li><a href="#character">CHARACTER</a></li>
       <li><a href="#gallery">GALLERY</a></li>
       <li><a href="#information">INFORMATION</a></li>
-      <li><a href="./index.html"> LANG JP</a></li>
-      <li><a href="./index_cn.html"> LANG CN</a></li>
+      <li><a href="./index.html">JP</a>/<a href="./index_cn.html">CN</a></li>
+
       <li>
         <a href="https://twitter.com/fragarian" target="_blank">
           <svg class="twitter_icon" version="1.1" id="Logo" xmlns="http://www.w3.org/2000/svg"
