--- a/ihanashi/index_ko.html
+++ b/ihanashi/index_ko.html
@@ -33,6 +33,27 @@
     <link rel="stylesheet" href="assets/css/noscript.css" />
   </noscript>
   <title>이하나시의 마녀</title>
+  <style type="text/css">
+    @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Nanum+Myeongjo:wght@700&display=swap');
+    body {
+      font-family: 'Nanum Gothic', sans-serif;
+    }
+    #top .copy {
+      font-family: 'Nanum Myeongjo', serif;
+    }
+    .story_wrapper .text3 p.text3-main {
+      font-family: 'Nanum Myeongjo', serif;
+    }
+    .character_list .card .caption .name {
+      font-family: 'Nanum Myeongjo', serif;
+    }
+    .character_list .card .caption .name_en {
+      font-family: 'Nanum Myeongjo', serif;
+    }
+    .information .description .detail > div.title dd {
+      font-family: 'Nanum Myeongjo', serif;
+    }
+  </style>
 </head>
 
 <body>
