--- a/ihanashi/index.html
+++ b/ihanashi/index.html
@@ -123,12 +123,16 @@
     </li>
     <li>
       <div class="date">2023.6.04</div>
-      <div class="title">イハナシの魔女が<a href=http://southerncross.sakura.ne.jp/of_the_Year/2022b.htm
+      <div class="title"><a href=http://southerncross.sakura.ne.jp/of_the_Year/2022b.htm
 >同人ゲーム・オブ・ザ・イヤー2022</a>にて「主演男優賞」「主演女優賞」「泣き部門賞」を受賞いたしました</div>
     </li>
     <li>
+      <div class="date">2023.4.28</div>
+      <div class="title">Nintendo Switch/PlayStation/Xbox版が発売しました。詳細は<a href=https://www.kemco.jp/game/ihanashi/ja>こちら</a>（外部サイト）</div>
+    </li>
+    <li>
       <div class="date">2023.2.20</div>
-      <div class="title">イハナシの魔女が<a href=https://www.dlsite.com/modpub/lp/home/dlsiteawards2022/result/
+      <div class="title"><a href=https://www.dlsite.com/modpub/lp/home/dlsiteawards2022/result/
 >DLsiteアワード2022</a>のゲーム部門にて受賞いたしました</div>
     </li>
     <li>
@@ -452,7 +456,7 @@
           </div>
           <div>
             <dt>配信</dt>
-            <dd><a href="https://store.steampowered.com/app/1950570/_/" target="_blank">Steam</a> / <a href="https://fragaria.booth.pm/">BOOTH</a>/ <a href="https://www.dlsite.com/home/work/=/product_id/RJ410787.html">DLsite</a> </dd>
+            <dd><a href="https://store.steampowered.com/app/1950570/_/" target="_blank">Steam</a> / <a href="https://fragaria.booth.pm/">BOOTH</a>/ <a href="https://www.dlsite.com/home/work/=/product_id/RJ410787.html">DLsite</a>/ <a href="https://www.kemco.jp/game/ihanashi/ja/">CS版（外部サイト）</a> </dd>
           </div>
           <div>
             <dt>発売日</dt>
