--- a/ihanashi/index_ko.html
+++ b/ihanashi/index_ko.html
@@ -115,7 +115,7 @@
       <h1>
         <img width="100%" src="assets/image/logo_KO.png">
       </h1>
-    <div class="lead">Release in ASutomun 2023</div>
+    <div class="lead">Release in Automun 2023</div>
 
     <div class="container banner_list">
       <a href="https://store.steampowered.com/app/1950570/_/" target="_blank"><img src="assets/image/banner_steam.png"></a>
