update release info of ihanashi

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                 <div>
                   <dt>リリース</dt>
-                  <dd>PC（予定）</dd>
+                  <dd>PC/Nintendo Switch/PlayStation/Xbox</dd>
                 </div>
               </dl>
             </div>
