--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
   <div class="container-small">
     <ul class="news_list">
     <li>
+      <div class="date">2024.12.23</div>
+      <div class="title">新作ステラーコードのストアページを公開しました。ストアは<a href=https://store.steampowered.com/app/3411510>こちら</a></div>
+    </li>
+    <li>
       <div class="date">2024.6.11</div>
       <div class="title">コミックマーケット104にてイハナシの魔女グッズを頒布予定です。Webカタログは<a href=https://webcatalog-free.circle.ms/Circle/19001414>こちら</a></div>
     </li>
