--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
   <div class="container-small">
     <ul class="news_list">
     <li>
+      <div class="date">2025.04.26</div>
+      <div class="title">ステラーコードのPVを公開しました。<a href=https://www.youtube.com/watch?v=lZJUD1T3n6c>Youtube</a>で視聴できます</div>
+    </li>
+    <li>
       <div class="date">2024.12.23</div>
       <div class="title">新作ステラーコードのストアページを公開しました。ストアは<a href=https://store.steampowered.com/app/3411510>こちら</a></div>
     </li>
