worksにステラーコードを追加

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
         <div class="date">2022.12.31</div>
         <div class="title"><a href=https://automaton-media.com/articles/columnjp/20221231-232414/>AUTOMATONライター陣が選ぶ「ゲーム・オブ・ザ・イヤー 2022」</a>にてイハナシの魔女が紹介されました</div>
       </li>
-   
+
       <li>
         <div class="date">2022.11.16</div>
         <div class="title">イハナシの魔女が優れたインディーゲームを表彰する<a href=https://indie.live-expo.games/awards/>INDIE Live Expo Awards 2022</a>にノミネートされました</div>
       </li>
- <!--    
+ <!--
 
     <li>
       <div class="date">2023.1.04</div>
@@ -171,6 +171,34 @@
   <h2>WORKS</h2>
   <div class="container">
     <ul class="work_list">
+      <li>
+        <article>
+          <a href="https://store.steampowered.com/app/3411510/_/"><img class="main_image" src="assets/image/works/stellar_code.png" /></a>
+          <div class="text">
+            <div class="title_area">
+              <h3 class="title">ステラーコード</h3>
+              <dl class="detail">
+                <div>
+                  <dt>発売日</dt>
+                  <dd>2025年8月</dd>
+                </div>
+                <div>
+                  <dt>ジャンル</dt>
+                  <dd>SFミステリー</dd>
+                </div>
+
+                <div>
+                  <dt>リリース</dt>
+                  <dd><a href="https://store.steampowered.com/app/3411510/_/">PC</a></dd>
+                </div>
+              </dl>
+            </div>
+            <div class="description">
+              宇宙からもたらされた不可思議な現象、研究者の事故死、未知の物質に刻まれた暗号。ノーベル賞確実の天才義妹と共に地球を懸けた謎解きに挑むSFミステリービジュアルノベル。
+            </div>
+          </div>
+        </article>
+      </li>
       <li>
         <article>
           <a href="ihanashi/"><img class="main_image" src="assets/image/works/ihanashi.png" /></a>
