--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <dl class="detail">
                 <div>
                   <dt>発売日</dt>
-                  <dd>2022.8.13</dd>
+                  <dd>2022年8月13日</dd>
                 </div>
                 <div>
                   <dt>ジャンル</dt>
@@ -217,7 +217,7 @@
 
                 <div>
                   <dt>リリース</dt>
-                  <dd>PC/Nintendo Switch/PlayStation/Xbox</dd>
+                  <dd><a href="https://store.steampowered.com/app/1950570/_/">PC</a> / <a href="https://store-jp.nintendo.com/item/software/D70010000062864">Nintendo Switch</a> / <br><a href="https://store.playstation.com/ja-jp/concept/10007955">PlayStation</a> / <a href="https://www.microsoft.com/store/apps/9pb2d6m3wjtl">Xbox</a></dd>
                 </div>
               </dl>
             </div>
@@ -236,7 +236,7 @@
               <dl class="detail">
                 <div>
                   <dt>発売日</dt>
-                  <dd>2017.08.11</dd>
+                  <dd>2017年08月11日</dd>
                 </div>
                 <div>
                   <dt>ジャンル</dt>
@@ -244,7 +244,7 @@
                 </div>
                 <div>
                   <dt>リリース</dt>
-                  <dd>PC/Nintendo Switch</dd>
+                  <dd><a href="https://fragaria.booth.pm/items/1409487">PC</a> / <a href="https://store-jp.nintendo.com/item/software/D70010000034306">Nintendo Switch</a></dd>
                 </div>
 
               </dl>
