--- a/ihanashi/index_ko.html
+++ b/ihanashi/index_ko.html
@@ -95,7 +95,7 @@
       <li><a href="#character">CHARACTER</a></li>
       <li><a href="#gallery">GALLERY</a></li>
       <li><a href="#information">INFORMATION</a></li>
-      <li><a href="./index.html">JP</a>/<a href="./index_cn.html">CN</a></li>
+      <li><a href="./index.html">JP</a>/<a href="./index_cn.html">CN</a>/KO</li>
 
       <li>
         <a href="https://twitter.com/fragarian" target="_blank">
