--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
                 <div>
                   <dt>ジャンル</dt>
-                  <dd>SFミステリー</dd>
+                  <dd>SFミステリーアドベンチャー</dd>
                 </div>
 
                 <div>
@@ -194,7 +194,7 @@
               </dl>
             </div>
             <div class="description">
-              宇宙からもたらされた不可思議な現象、研究者の事故死、未知の物質に刻まれた暗号。ノーベル賞確実の天才義妹と共に地球を懸けた謎解きに挑むSFミステリービジュアルノベル。
+              大学四年生の「佐藤大地」は大学の裏山で奇妙な物体を見つける。ノーベル賞確実と言われる天才義妹「神代瞳」と共に物体の出力する暗号を解読する佐藤。宇宙からもたらされた不可思議な現象、研究者の事故死、未知の物質に刻まれた暗号。謎を解いた先に彼らが見たものとは……。宇宙の神秘に挑むSFサスペンスミステリー。
             </div>
           </div>
         </article>
